# cpp-backend

./: .gitignore
.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  gascooker.h  hotdog.h  ingredients.h  logger.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: api_strings.h  http_server.cpp  http_server.h  json_fields.h  json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/map_json/solution/src/: api_strings.h  http_server.cpp  http_server.h  json_fields.h  main.cpp  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp  seabattle.h
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  prepare.sh
sprint2/problems/command_line/solution/src/: main.cpp
sprint2/problems/game_state/solution/: CMakeLists.txt  conanfile.txt
sprint2/problems/game_state/solution/src/: main.cpp
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: api_handler.cpp  api_handler.h  app.cpp  app.h  app_use_cases.cpp  app_use_cases.h  file_handler.cpp  file_handler.h  http_handler_defs.h  http_handler_types.h  json_fields.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  utils.h
sprint2/problems/join_game/solution/src/app/: app.cpp  app.h  app_use_cases.cpp  app_use_cases.h
sprint2/problems/join_game/solution/src/http/: api_handler.cpp  http_handler_types.h  http_server.cpp  http_server.h  request_handler.cpp  request_handler.h
sprint2/problems/join_game/solution/src/model/: model.cpp  model.h
sprint2/problems/join_game/solution/src/utils/: json_loader.h  write_adapter.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: json_fields.h  logger.cpp  logger.h  logging_request_handler.cpp  logging_request_handler.h  main.cpp  request_handler.cpp  server_params.h
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/time_control/solution/src/: main.cpp
sprint3/problems/ammo/solution/: ammo.txt  load.yaml  local_load.yaml  run_tank.sh
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/src/: main.cpp
sprint3/problems/find_return/solution/tests/: collision-detector-tests.cpp  model_tests.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gather/solution/src/: collision_detector.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/gen_objects/solution/src/: main.cpp
sprint3/problems/gen_objects/solution/src/app/: app.h  join_use_case.cpp  maps_use_case.h  player_use_case.cpp  player_use_case.h  players.cpp  players.h  players_use_case.cpp  state_use_case.h
sprint3/problems/gen_objects/solution/src/extra_data/: extra_data.h
sprint3/problems/gen_objects/solution/src/http/: api_handler.cpp  api_handler.h  http_handler_types.h  http_server.cpp  request_handler.h
sprint3/problems/gen_objects/solution/src/model/: model.cpp  model.h
sprint3/problems/gen_objects/solution/src/utils/: json_fields.h  json_loader.cpp  json_loader.h
sprint3/problems/gen_objects/solution/tests/: model_tests.cpp
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/instrumentation/solution/: event2dot  report
sprint3/problems/scores/solution/: Dockerfile  prepare.sh
sprint3/problems/scores/solution/tests/: collision-detector-tests.cpp  loot_generator_tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/tv/solution/src/: controller.h  (+1 more)
sprint3/problems/urldecode/solution/: prepare.sh
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-2/solution/: prepare.sh
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/data/: config.json
sprint4/problems/leave_game/solution/src/: main.cpp  server_params.h
sprint4/problems/leave_game/solution/src/app/: add_player_use_case.h  app.cpp  app.h  join_use_case.cpp  player_use_case.cpp  players.cpp  players.h  records_use_case.cpp  records_use_case.h  save_records_use_case.cpp  save_records_use_case.h  state_use_case.cpp  state_use_case.h  tick_use_case.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/leave_game/solution/src/http/: api_handler.cpp  api_handler.h  http_handler_defs.h  http_handler_types.cpp  http_server.cpp  request_handler.h  request_handler_logging.h
sprint4/problems/leave_game/solution/src/model/: buildings.cpp  dog.cpp  dog.h  game.cpp  game.h  game_session.cpp  game_session.h  item.h  map.cpp  model_geom.cpp  model_geom.h  model_serialization.h  road.cpp
sprint4/problems/leave_game/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/leave_game/solution/src/utils/: collision_detector.cpp  collision_detector.h  json_fields.h  json_loader.cpp  json_loader.h  logger.cpp  tagged.h  ticker.h
sprint4/problems/leave_game/solution/tests/: tests_main.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt
(+149 files in other folders)
